--- a/src/2-form.html
+++ b/src/2-form.html
@@ -1,1 +1,14 @@
-<div>Yo</div>
+<div class="form-container">
+  <form class="feedback-form" autocomplete="off">
+    <label class="email">
+      Email
+      <input type="email" name="email" autofocus />
+    </label>
+    <label class="message">
+      Message
+      <textarea name="message" rows="8"></textarea>
+    </label>
+    <button type="submit">Submit</button>
+  </form>
+  
+</div>
