--- a/src/index.html
+++ b/src/index.html
@@ -14,16 +14,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    
-    <main>
+    <main class="main-page">
       <div class="container">
-        <load src="./1-gallery.html"/> 
-        <load src="./2-form.html"/>
+          <a href="./1-gallery.html" class="navigation-link">Gallery</a>
+          <a href="./2-form.html" class="navigation-link">Form</a>
       </div>
       
     </main>
-
-    <script type="module" src="./js/1-gallery.js"></script>
-    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
